Development
	Remember softvol option patch by smoohta
	Updated Czech translation
	Fix problem with playlist detection on glib < 2.22
	Add Hungarian translation
	Add Preference in GUI to disable fullscreen control bar animation, looks crappy on intel+gtk 2.18
	Add GTK2.14 compile defs to gtk_widget_get_window
0.9.8
	Make some events from dbus (separate thread) be processed in the idle loop
	Prevent next item play when terminating
	Set tracker default values when playing a new item
	Don't tell firefox to reload plugins when running in plugin mode
	When closing preference dialog, set media start position to 0 when streaming
	Don't restart streaming media when closing preferences
	Fix problem with gnome-mplayer requesting the next item from gecko-mediaplayer, but
		gnome-mplayer is in retry mode, so two videos get played over each other
	Work around roundf compliation errors on non-Fedora Linux machines
	Prepare for GTK 2.18 Native Client windows, by using a patch from empathy
	Fix various problems found on mailing list
    Updated Polish translation
    Fix situation where mplayer thread being dead is detected in more places
    Fix problem with DVD video size being incorrect on media load
	Work on mute not being saved across items in playlist
    Updated pt_BR translation
    Add en_GB translation
    Version bump, debug message
    Fix prev and next when there are gaps in the playlist order values
    Delay loading the item to play, until everything is setup and flushed
    Don't autopause streaming media
    Pan and Scan functionality causes display issues with old mplayers, --enable-panscan
    Pan and Scan functionality (with new mplayer)
    Separate out plugin cache value and gnome-mplayer cacheing (disabled by default in player)
    Added support for --ss and --endpos command line options, similar to mplayer options
    Apple HD trailer fixes
    Don't make the link active in the about dialog if we are using gtk < 2.14